.local-manifest/traefik/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard

spec:
  type: ClusterIP
  ports:
    - targetPort: dashboard
      name: dashboard
      port: 80
  selector:
    app: traefik
