.local-manifest/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: web-secure
      port: 443
      targetPort: web-secure
    - name: dashboard
      port: 8080
      targetPort: dashboard
