.local-manifest/traefik/dashboard-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.local.trapti.tech`)
      services:
        - kind: TraefikService
          name: dashboard@internal
    - kind: Rule
      match: Host(`traefik.local.trapti.tech`) && PathPrefix(`/api`)
      services:
        - kind: TraefikService
          name: api@internal
